Fix layout problem to fit in one screen
Add font
Remove nav for layout problems
Refactor jquery function

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,15 @@ html, body, .container-fluid, .row {
 	height: 100%;
 }
 
-/* Sidebar */
+.container-fluid {
+	padding: 0;
+}
+
+h1 {
+	font-family: 'Audiowide', cursive;
+}
+
+/************** Sidebar *******************/
 .sidebar {
 	height: 100%;
 	position: fixed;
@@ -12,22 +20,24 @@ html, body, .container-fluid, .row {
 	display: block;
 	overflow: hidden;
 	padding: 0;
-	text-align: center;
 }
 
+/* Sidebar options */
 .sidebar-options {
+	width: 100%;
 	height: 16.66%;
 	border: 2px solid red;
-	background: #5c5c5c;
+	background: #339966;
 	color: #fff;
 }
 
-#home-option {
+/* home option */
+#home {
 	height: 50%;
 	border: 2px solid blue;
 }
 
-/*Receipt bar*/
+/******* Receipt bar *******/
 #receipt-bar {
 	left: auto;
 	right: 0;
@@ -37,7 +47,13 @@ html, body, .container-fluid, .row {
 	padding: 10px;
 }
 
-/* Main content */
+/******************* Main Content *********************/
+.main-container {
+	display: flex;
+	flex-direction: column;
+}
+
+/****** Contact Info *******/
 .contact-info {
 	height: auto;
 	padding: 3px 10px;
@@ -46,16 +62,22 @@ html, body, .container-fluid, .row {
 	border: 2px solid green;
 }
 
+/****** Page content ******/
 .page-container {
 	background: #f9f8b1;
-	padding: 30px;
+	padding: 10px;
+	text-align: center;
 }
 
 .page-content {
 	display: none;
+	border: 2px solid green;
+	width: 100%;
 }
 
 /* Place this after page-content to show home-page from beginning*/
 #home-page {
 	display: block;
 }
+
+
